# cadence

./: .gitignore  Cargo.toml  README.md  test.sh
src/: cli.rs  config.rs  db.rs  init.rs  lib.rs  main.rs  markdown.rs  scanner.rs  schema.rs  sync.rs  updater.rs
tests/: add.rs  commit.rs
